--- a/style.css
+++ b/style.css
@@ -1,30 +1,56 @@
-ul{
+#menu, #menu2, small{ 
+justify-content: right;
 list-style: none;
 display: flex;
-justify-content: center;
 }
-li{
+.nav-link{
     float:left;
     padding: 3px;
 }
-
-.product {
-    display: block;
-    border: 2px black solid;
-    height: 200px;
-    width: 250px;
-    margin-bottom: 10px;;
-    align-items: center;
-
+#form{
+width: 100%;
+max-width: 600px;
+margin: 0 auto;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
-
 .btn {
     background-color: aquamarine;
     border: 2px;
-
     align-items: center;
 }
-
 body{
     background-color: gainsboro;
+}
+#video{
+    display: flex;
+    width: 100%;
+    padding: 25px 0;
+    margin: 0 auto;
+    max-width: 600px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+#products{
+    overflow: hidden;
+	width: 100%;
+    margin: 0 auto;
+}
+.product {
+    float:left;
+    display: flex;
+    border: 1px lightsteelblue solid;
+    height: 200px;
+    width: 250px;
+    margin: 0 auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+footer{
+    background-color: darkgrey;
+    padding: 5px;
 }
